--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/drawer": "^6.3.1",
@@ -18,8 +19,11 @@
     "axios": "^0.26.0",
     "deepmerge": "^4.2.2",
     "expo": "~44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-camera": "~12.1.2",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "pinar": "^0.12.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -29,12 +33,14 @@
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
     "react-native-paper-dates": "^0.8.7",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
+    "react-native-webview": "11.15.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
