--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/slider": "4.1.12",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
