--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "expo-camera": "~12.1.2",
     "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "pinar": "^0.12.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-country-picker-modal-fix": "^0.3.2",
+    "react-native-device-info": "^8.4.9",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
@@ -42,9 +46,11 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "world-countries": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
