--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/slider": "4.1.12",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
@@ -21,6 +23,7 @@
     "axios": "^0.26.0",
     "deepmerge": "^4.2.2",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
     "expo-barcode-scanner": "~11.2.0",
     "expo-camera": "~12.1.2",
     "expo-linear-gradient": "~11.0.3",
