--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-barcode-scanner": "~11.2.0",
     "expo-camera": "~12.1.2",
     "expo-linear-gradient": "~11.0.3",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "install": "^0.13.0",
@@ -42,6 +43,7 @@
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
     "react-native-paper-dates": "^0.8.7",
@@ -57,8 +59,7 @@
     "react-redux": "^7.2.6",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
-    "world-countries": "^4.0.0",
-    "expo-splash-screen": "~0.14.1"
+    "world-countries": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
